--- a/app/scss/partials/_fonts.scss
+++ b/app/scss/partials/_fonts.scss
@@ -1,7 +1,18 @@
 @font-face {
-	font-family: 'Metropolis';
-	src: url('../fonts/Metropolis-Bold.woff2') format('woff2'),
-		 url('../fonts/Metropolis-Bold.woff') format('woff');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'Arial';
+    src: url('../fonts/ArialMT.woff2') format('woff2'),
+        url('../fonts/ArialMT.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
+
+@font-face {
+    font-family: 'Minion Pro';
+    src: url('../fonts/MinionPro-Regular.woff2') format('woff2'),
+        url('../fonts/MinionPro-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
