--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -12,16 +12,15 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: #000;
+		background-color: #000000;
 		z-index: 3;
 	}
 	// .header__container
 
 	&__container {
 		display: flex;
-		justify-content: space-between;
 		align-items: center;
-		height: 75px;
+		height: 60px;
 		position: relative;
 	}
 
@@ -31,6 +30,7 @@
 		color: #fff;
 		position: relative;
 		z-index: 5;
+		margin: 0px 120px 0px 0px;
 	}
 
 }
