--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -1,4 +1,5 @@
 .menu {
+	flex: 1 1 auto;
 	
 	@media (max-width: 1000px) {
 		position: fixed;
@@ -35,24 +36,51 @@
 
 	&__item {
 		display: flex;
-		font-weight: 600;
-	}
+		position: relative;
 
-	&__item:not(:last-child) {
-		margin-right: 50px;
+		&::before {
+			position: absolute;
+			display: block;
+			content: "";
+			background-color: #ffffff;
+			opacity: 0.1;
+			height: 100%;
+			width: 1px;
+			left: 0;
+		}
+
+		&:last-child::after{
+			position: absolute;
+			display: block;
+			content: "";
+			background-color: #ffffff;
+			opacity: 0.1;
+			height: 100%;
+			width: 1px;
+			right: 0;
+		}
 	}
 
 	// .menu__link
 
 	&__link {
 		position: relative;
-		padding: 39px 0px;
-		color: $white;
-		text-transform: capitalize;
+		color: #888888;
+		font-family: Poppins;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 22px;
+		padding: 20px;
+		text-transform: uppercase;
 
 		&:hover {
-			color: $red;
+			color: #e12121;;
 		}
+	}
+
+	&__link-btn {
+		font-size: 0;
+		background: transparent;
 	}
 
 	// .menu__burger
