--- a/app/scss/partials/_vars.scss
+++ b/app/scss/partials/_vars.scss
@@ -1,20 +1,22 @@
 // Colours
 $white: #fff;
-$black: #000;
-$red: #ff0036;
-$gray: #262626;
-$font-gray: #505050;
+$black: #000000;
+$red: #e12121;
+$yellow: #fef838;
+$gray: #888888;
 $font-color: #a4a4a4;
 $line-color: #262626;
 $brand-color: #52c13e;
 $btn-black: #131313;
 
 // Fonts
-$font-family: "Raleway", sans-serif;
-$font-secondary: "Open Sans", sans-serif;
+$font-family: 'Poppins', sans-serif;
+$font-secondary: 'Lato', sans-serif;
+$font-minion: 'Minion Pro';
+$font-arial: 'Arial';
 
 // Adaptive-font
-$maxWidth: 1280;
+$maxWidth: 1920;
 
 // Weights
 $light: 300;
