--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,8 @@
 // Fonts
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,600);
 
 // Mixins
-@import "mixins/fonts-style";
 @import "mixins/adaptive-font";
 
 // Partials
@@ -12,10 +12,13 @@
 
 // Blocks
 @import "blocks/header";
+@import "blocks/main-slider";
 @import "blocks/footer";
 
 // Components
 @import "components/menu";
+@import "components/cart";
+@import "components/slider";
 
 /* ==========================================================================
   General Styles
@@ -38,7 +41,7 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
 .container {
-  max-width: 1200px;
+  max-width: 1800px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -57,19 +60,7 @@ body.lock {
 	}
 }
 
-.main-screen {
-	position: relative;
-	
-	&__bg {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-	}
-}
-
-._ibg{
+.ibg{
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -79,5 +70,6 @@ body.lock {
 }
 
 .page {
+	background-color: #f5f5f5;
 	flex: 1 1 auto;
 }
