--- a/app/scss/blocks/main-slider.scss
+++ b/app/scss/blocks/main-slider.scss
@@ -1,28 +1,30 @@
 .main-slider {
 	padding: 90px 0px 0px 0px;
 
-	// .main-slider__item
-
-	&__item {
-		position: relative;
-		max-width: 1770px;
-		width: 100%;
-		height: 630px;
-		background-color: rgba(0, 0, 0, 0.1);
-
-		@media (max-width: 1400px) {
-			height: 450px;
-		}
-	}
-
 	// .main-slider__image
 
 	&__image {
-		position: absolute;
-		height: 100%;
-		width: 100%;
-		left: 0;
-		top: 0;
+		position: relative;
+		padding: 0px 0px 19% 0px;
+		overflow: hidden;	
+		background-color: rgba(0, 0, 0, 0.1);
+
+		@media (max-width: 1400px) {
+			padding: 0px 0px 10% 0px;
+		}
+
+		@media (max-width: 1000px) {
+			padding: 0px 0px 0% 0px;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 	}
 
 	// .main-slider__content
@@ -30,8 +32,8 @@
 	&__content {
 		position: relative;
 		z-index: 1;
-		max-width: 670px;
-		top: 28%;
+		width: 584px;
+		top: 184px;
 		left: 27%;
 
 		@media (max-width: 1400px) {
