--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -1,66 +1,160 @@
 .cart {
 	position: relative;
-	z-index: 3;
-	display: flex;
-	align-items: center;
+	background: #fff;
+	border-radius: 5px;
+	padding: 20px;
+	overflow: hidden;
 
-	// .cart__setting
+	&:hover {
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-	&__setting {
-		position: relative;
-		padding: 20px;
-		cursor: pointer;
-
-		&::after {
-			position: absolute;
-			display: block;
-			content: "";
-			background-color: #ffffff;
-			opacity: 0.1;
-			height: 100%;
-			width: 1px;
-			right: 0;
-			top: 0;
+		.cart__overlay {
+			overflow: visible;
+			opacity: 1;
 		}
+		.cart__body-color {
+			opacity: 1;
+		}
+
+		.cart__body-btn {
+			background-color: #e12121;
+			color: #ffffff;
+		}
+
+		.cart__body-actions {
+			opacity: 1;
+		}
+	}
+	// .cart__img
+
+	&__img {
+		margin: 0px 0px 10px 0px;
+		padding: 0px 0px 93% 0px;
+		overflow: hidden;
+		position: relative;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+	}
+
+	&__overlay {
+		position: absolute;
+		z-index: 1;
+		top: 8px;
+		left: -30px;
+		width: 115px;  
+		height: 40px;
+		line-height: 40px;
+		background-color: #7ed250;
+		color: #fff;
+		text-transform: capitalize;
+		text-align: center;
+		transform: rotate(-45deg);
+		opacity: 0;
+		transition: opacity .3s;
+	}
+
+	// .cart__body
+
+	&__body {
+	}
+
+	// .cart__body-header
+
+	&__body-header {
+		display: flex;
+		justify-content: space-between;
+		margin: 0px 0px 16px 0px;
+	}
+
+	// .cart__body-star
+
+	&__body-star {
+		display: flex;
+
+		li {
+			margin: 0px 5px 0px 0px;
+		}
+	}
+
+	// .cart__body-color
+
+	&__body-color {
+		display: flex;
+		opacity: 0;
+		transition: opacity .3s;
+
+		li {
+			width: 20px;
+			height: 20px;
+			background: red;
+			border-radius: 50%;
+			margin: 0px 0px 0px 5px;
+			cursor: pointer;
+		}
+	}
+
+	// .cart__body-descr
+
+	&__body-descr {
+		color: #888888;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 22px;
+		text-transform: uppercase;
+		margin: 0px 0px 23px 0px;
 
 		span {
-			color: #888888;
-			font-size: 13px;
-			font-weight: 400;
+			color: #e12020;
+			font-weight: 600;
 		}
 	}
 
-	// .cart__wallet
+	// .cart__body-footer
 
-	&__wallet {
-		padding: 20px;
-		cursor: pointer;
+	&__body-footer {
 		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 
-	&__wallet-icon {
-		margin: 0px 8px 0px 0px;
-	}
+	// .cart__body-btn
 
-	// .cart__wallet-price
-
-	&__wallet-price {
+	&__body-btn {
+		padding: 10px 17px;
+		border-radius: 15px;
+		border: 1px solid #dddddd;
+		background-color: #ffffff;
 		color: #888888;
-		font-size: 13px;
+		font-size: 12px;
 		font-weight: 400;
-		line-height: 20px;
-		
+		text-transform: uppercase;
+		transition: color .3s, background-color .3s;
 	}
 
-	// .cart__wallet-sum
-
-	&__wallet-sum {
-		color: #e12020;
+	&__body-actions {
+		display: flex;
+		font-size: 20px;
+		opacity: 0;
+		transition: opacity .3s;
 	}
 
-	// .cart__wallet-total
+	// .cart__body-shuffle
 
-	&__wallet-total {
-		color: #e12020;
+	&__body-shuffle {
+		cursor: pointer;
+	}
+
+	// .cart__body-like
+
+	&__body-like {
+		cursor: pointer;
+		margin: 0px 0px 0px 20px;
 	}
 }
