--- a/app/scss/partials/_fonts.scss
+++ b/app/scss/partials/_fonts.scss
@@ -16,3 +16,76 @@
     font-display: swap;
 }
 
+@font-face {
+  font-family: 'fontello';
+  src: url('../fonts/fontello.eot?43398500');
+  src: url('../fonts/fontello.eot?43398500#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?43398500') format('woff2'),
+       url('../fonts/fontello.woff?43398500') format('woff'),
+       url('../fonts/fontello.ttf?43398500') format('truetype'),
+       url('../fonts/fontello.svg?43398500#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+ /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+ /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+ /*
+ @media screen and (-webkit-min-device-pixel-ratio:0) {
+	@font-face {
+	  font-family: 'fontello';
+	  src: url('../font/fontello.svg?32029953#fontello') format('svg');
+	}
+ }
+ */
+  
+  [class^="icon-"]:before, [class*=" icon-"]:before {
+	font-family: "fontello";
+	font-style: normal;
+	font-weight: normal;
+	speak: never;
+  
+	display: inline-block;
+	text-decoration: inherit;
+	text-align: center;
+	/* opacity: .8; */
+  
+	/* For safety - reset parent styles, that can break glyph codes*/
+	font-variant: normal;
+	text-transform: none;
+
+  
+	/* you can be more comfortable with increased icons size */
+	/* font-size: 120%; */
+  
+	/* Font smoothing. That was taken from TWBS */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+  
+	/* Uncomment for 3D effect */
+	/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+ }
+  
+ .icon-search:before { content: '\e800'; } /* '' */
+ .icon-star:before { content: '\e801'; } /* '' */
+ .icon-heart-empty:before { content: '\e802'; } /* '' */
+ .icon-heart:before { content: '\e803'; } /* '' */
+ .icon-shuffle:before { content: '\e804'; } /* '' */
+ .icon-right-open:before { content: '\e805'; } /* '' */
+ .icon-left-open:before { content: '\e806'; } /* '' */
+ .icon-left-big:before { content: '\e807'; } /* '' */
+ .icon-right-big:before { content: '\e808'; } /* '' */
+ .icon-cog:before { content: '\e809'; } /* '' */
+ .icon-basket:before { content: '\e80a'; } /* '' */
+ .icon-twitter:before { content: '\f099'; } /* '' */
+ .icon-facebook:before { content: '\f09a'; } /* '' */
+ .icon-gplus:before { content: '\f0d5'; } /* '' */
+ .icon-angle-left:before { content: '\f104'; } /* '' */
+ .icon-angle-right:before { content: '\f105'; } /* '' */
+ .icon-angle-up:before { content: '\f106'; } /* '' */
+ .icon-angle-down:before { content: '\f107'; } /* '' */
+ .icon-youtube-play:before { content: '\f16a'; } /* '' */
+ .icon-instagram:before { content: '\f16d'; } /* '' */
+ .icon-tumblr:before { content: '\f173'; } /* '' */
+ .icon-left:before { content: '\f177'; } /* '' */
+ .icon-right:before { content: '\f178'; } /* '' */
+ .icon-pinterest:before { content: '\f231'; } /* '' */
