--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,7 +20,7 @@
 // Components
 @import "components/menu";
 @import "components/cart";
-/* @import "components/basket"; */
+@import "components/basket";
 @import "components/slider";
 @import "components/main-title";
 
