--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -5,6 +5,10 @@
 	padding: 20px;
 	overflow: hidden;
 
+	@media (max-width: 1366px) {
+		padding: 10px;
+	}
+
 	&:hover {
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
@@ -33,6 +37,10 @@
 		overflow: hidden;
 		position: relative;
 
+		@media (max-width: 1366px) {
+			padding: 0px 0px 90% 0px;
+		}
+
 		img {
 			width: 100%;
 			height: 100%;
@@ -48,16 +56,22 @@
 		z-index: 1;
 		top: 8px;
 		left: -30px;
-		width: 115px;  
-		height: 40px;
-		line-height: 40px;
+		width: 100px;  
+		height: 25px;
+		line-height: 25px;
 		background-color: #7ed250;
 		color: #fff;
+		font-size: 13px;
+		font-weight: 400;
 		text-transform: capitalize;
 		text-align: center;
 		transform: rotate(-45deg);
 		opacity: 0;
 		transition: opacity .3s;
+
+		@media (max-width: 768px) {
+			opacity: 1;
+		}
 	}
 
 	// .cart__body
@@ -71,6 +85,10 @@
 		display: flex;
 		justify-content: space-between;
 		margin: 0px 0px 16px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 10px 0px;
+		}
 	}
 
 	// .cart__body-star
@@ -80,6 +98,18 @@
 
 		li {
 			margin: 0px 5px 0px 0px;
+
+
+		}
+
+		i {
+			font-size: 13px;
+			color: #cccccc;
+			cursor: pointer;
+
+			&:hover{
+				color: #e2bc0a;
+			}
 		}
 	}
 
@@ -90,13 +120,23 @@
 		opacity: 0;
 		transition: opacity .3s;
 
+		@media (max-width: 768px) {
+			opacity: 1;
+		}
+
 		li {
 			width: 20px;
 			height: 20px;
-			background: red;
 			border-radius: 50%;
 			margin: 0px 0px 0px 5px;
 			cursor: pointer;
+		}
+
+		li:nth-child(1){
+			background: #e12020;
+		}
+		li:nth-child(2){
+			background: #034EB2;
 		}
 	}
 
@@ -110,10 +150,16 @@
 		text-transform: uppercase;
 		margin: 0px 0px 23px 0px;
 
-		span {
-			color: #e12020;
-			font-weight: 600;
+		@media (max-width: 1366px) {
+			margin: 0px 0px 15px 0px;
+			font-size: 14px;
+			line-height: 20px;
 		}
+	}
+
+	&__body-price {
+		color: #e12020;
+		font-weight: 600;
 	}
 
 	// .cart__body-footer
@@ -136,6 +182,10 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		transition: color .3s, background-color .3s;
+	
+		@media (max-width: 1366px) {
+			padding: 8px 15px;
+		}
 	}
 
 	&__body-actions {
@@ -143,12 +193,25 @@
 		font-size: 20px;
 		opacity: 0;
 		transition: opacity .3s;
+
+		@media (max-width: 1366px) {
+			font-size: 18px;
+		}
+
+		@media (max-width: 768px) {
+			opacity: 1;
+		}
 	}
 
 	// .cart__body-shuffle
 
 	&__body-shuffle {
 		cursor: pointer;
+		color: #aaaaaa;
+
+		&.active {
+			color: #333333;
+		}
 	}
 
 	// .cart__body-like
@@ -156,5 +219,14 @@
 	&__body-like {
 		cursor: pointer;
 		margin: 0px 0px 0px 20px;
+		color: #aaaaaa;
+
+		&.active {
+			color: #333333;
+		}
+
+		@media (max-width: 1366px) {
+			margin: 0px 0px 0px 10px;
+		}
 	}
 }
