Add block policy with adaptive

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/main-slider";
 @import "blocks/information";
 @import "blocks/featured";
+@import "blocks/policy";
 @import "blocks/footer";
 
 // Components
