--- a/app/scss/blocks/featured.scss
+++ b/app/scss/blocks/featured.scss
@@ -1,5 +1,21 @@
 .featured {
 	padding: 80px 0px;
+
+	@media (max-width: 1366px) {
+		padding: 60px 0px;
+	}
+
+	@media (max-width: 1000px) {
+		padding: 50px 0px;
+	}
+
+	@media (max-width: 768px) {
+		padding: 40px 0px
+	}
+
+	@media (max-width: 550px) {
+		padding: 30px 0px;
+	}
 	
 	// .featured__main-title
 
