--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -4,6 +4,7 @@
 	border-radius: 5px;
 	padding: 20px;
 	overflow: hidden;
+	margin: 10px 0px 0px 0px;
 
 	@media (max-width: 1366px) {
 		padding: 10px;
