--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -113,4 +113,45 @@
 	color: #da4b4b;
 }
  
+/* ==========================================================================
+  testimonials__slider
+========================================================================== */
+.testimonials__slider .slick-dots{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	z-index: 10;
+	bottom: -40px;
+	margin: 0px 0px 10px 0px;
+}
 
+.testimonials__slider .slick-dots li:not(:last-child){
+	margin: 0px 10px 0px 0px;
+}
+	
+.testimonials__slider .slick-dots li.slick-active button{
+	background-color: transparent;
+}
+	
+.testimonials__slider .slick-dots button{
+	width: 16px;
+	height: 16px;
+	border: 3px solid #eaeaea;
+	border-radius: 50%;
+	outline: none;
+	font-size: 0;
+	padding: 0;
+}
+
+
+.news__slider .slick-arrow {
+	top: 33%;
+}
+
+.news__slider .slick-prev{
+	left: 25px;
+}
+
+.news__slider .slick-next{
+	right: 25px;
+}
