--- a/app/scss/blocks/newsletter.scss
+++ b/app/scss/blocks/newsletter.scss
@@ -1,12 +1,38 @@
 .newsletter {
-	background-color: rgba(0, 0, 0, 0.79);
+	background: url(../img/newsletter/bg.webp);
+	background-position: center 56%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+	
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		background-color: rgba(0, 0, 0, .6);
+	}
 	// .newsletter__row
 
 	&__row {
+		position: relative;
+		z-index: 1;
 		height: 90px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+
+		@media (max-width: 1400px) {
+			height: 70px;
+		}
+
+		@media (max-width: 800px) {
+			flex-direction: column;
+			height: 130px;
+			justify-content: space-around;
+		}
 	}
 
 	// .newsletter__column
@@ -22,9 +48,22 @@
 		color: #ffffff;
 		font-size: 26px;
 		font-weight: 600;
-		line-height: 60px;
 		text-transform: uppercase;
 		margin: 0px 20px 0px 0px;
+
+		@media (max-width: 1400px) {
+			font-size: 20px;
+			margin: 0 15px 0 0;
+		}
+
+		@media (max-width: 950px) {
+			font-size: 18px;
+		}
+
+		@media (max-width: 450px) {
+			font-size: 16px;
+			margin: 0 10px 0 0;
+		}
 	}
 
 	// .newsletter__form
@@ -44,6 +83,18 @@
 		color: #ffffff;
 		font-size: 13px;
 		font-weight: 400;
+
+		@media (max-width: 1400px) {
+			width: 250px;
+		}
+
+		@media (max-width: 950px) {
+			width: 170px;
+		}
+
+		@media (max-width: 450px) {
+			width: 150px;
+		}
 
 		&::placeholder {
 			color: #fff;
@@ -67,6 +118,20 @@
 		font-weight: 300;
 		margin: 0px 20px 0px 0px;
 
+		@media (max-width: 1400px) {
+			margin: 0px 15px 0px 0px;
+			font-size: 20px;
+		}
+
+		@media (max-width: 950px) {
+			font-size: 18px;
+		}
+
+		@media (max-width: 450px) {
+			font-size: 16px;
+			margin: 0px 10px 0px 0px;
+		}
+
 		span {
 			color: #fee902;
 			font-weight: 600;
@@ -83,5 +148,15 @@
 		font-size: 13px;
 		font-weight: 600;
 		text-transform: uppercase;
+
+		@media (max-width: 950px) {
+			padding: 14px 24px;
+			font-size: 11px;
+		}
+
+		@media (max-width: 450px) {
+			padding: 14px 25px;
+			white-space: nowrap;
+		}
 	}
 }
