--- a/app/scss/blocks/testimonials.scss
+++ b/app/scss/blocks/testimonials.scss
@@ -71,6 +71,8 @@
 			border-radius: 50%;
 			width: 80px;
 			height: 80px;
+			object-fit: cover;
+			object-position: center;
 			background-color: #e9e9e9;
 
 			@media (max-width: 1400px) {
