--- a/app/scss/components/accordion.scss
+++ b/app/scss/components/accordion.scss
@@ -1,42 +1,41 @@
 .accordion {
 	max-width: 100%;
+	display: none;
+
+	@media (max-width: 1000px) {
+		display: block;
+	}
 	// .accordion__item
 
 	&__item {
 		margin-bottom:10px;
 		position:relative;
-
-		&:nth-child(1) .accordion__item-info{
-			display: block;
-		}
 	}
 
 	// .accordion__item-title
 
 	&__item-title {
 		position: relative;
-		font-family: $font-family-passion;
-		font-size: 20px;
+		font-size: 16px;
 		color: #000;
 		cursor:pointer;
 		background: $white;
-		padding: 25px 55px 23px 50px;
+		padding: 15px 55px 15px 50px;
 		border-radius: 50px;
 		transition:all .2s linear 0;
 
 		&:after {
-			content: "\e803";
+			content: "\f177";
 			font-family: 'fontello';
-			height: 50px;
-			width: 50px;
+			height: 35px;
+			width: 35px;
 			position: absolute;
 			right: 7px;
-			bottom: 8px;
-			line-height: 50px;
+			top: 7px;
+			line-height: 35px;
 			border-radius: 50%;
 			text-align: center;
-			background: $red;
-			color: $white;
+			color: #000;
 		}
 	}
 
@@ -48,10 +47,9 @@
 		background: $red;
 
 		&:after {
-			content: "\e804";
+			content: "\f178";
 			font-family: 'fontello';
-			background: $white;
-			color: $red;
+			color: #fff;
 		}
 
 		.title_block {
@@ -64,7 +62,7 @@
 
 	&__item-info {
 		display:none;
-		padding: 35px 0px 35px 55px;
+		padding: 15px 0 10px 16px;
 		overflow: hidden;
 	}
 
