--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -45,7 +45,7 @@
 		img {
 			width: 100%;
 			height: 100%;
-			object-fit: cover;
+			object-fit: contain;
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -100,7 +100,9 @@
 		li {
 			margin: 0px 5px 0px 0px;
 
-
+			&:nth-child(-n+3) i{
+				color: #e2bc0a;
+			}
 		}
 
 		i {
@@ -144,14 +146,21 @@
 	// .cart__body-descr
 
 	&__body-title {
-		display: inline-block;
 		color: #888888;
 		font-weight: 400;
 		font-size: 16px;
-		line-height: 22px;
 		text-transform: uppercase;
 		margin: 0px 0px 23px 0px;
 		transition: color .3s;
+		width: 100%;
+		height: calc(22px * 2);
+
+		overflow: hidden;
+		line-height: 22px;
+
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical; 
 
 		@media (max-width: 1366px) {
 			margin: 0px 0px 15px 0px;
