--- a/app/scss/partials/_fonts.scss
+++ b/app/scss/partials/_fonts.scss
@@ -76,6 +76,7 @@
  .icon-right-big:before { content: '\e808'; } /* '' */
  .icon-cog:before { content: '\e809'; } /* '' */
  .icon-basket:before { content: '\e80a'; } /* '' */
+ .icon-play:before { content: '\e80b'; } /* '' */
  .icon-twitter:before { content: '\f099'; } /* '' */
  .icon-facebook:before { content: '\f09a'; } /* '' */
  .icon-gplus:before { content: '\f0d5'; } /* '' */
