--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -29,6 +29,7 @@
 @import "components/basket";
 @import "components/slider";
 @import "components/main-title";
+@import "components/accordion";
 
 /* ==========================================================================
   General Styles
