Fix bugs, adaptive, icons, imgs

--- a/app/scss/blocks/featured.scss
+++ b/app/scss/blocks/featured.scss
@@ -25,12 +25,13 @@
 	// .featured__slider
 
 	&__slider{
+		margin: 0px -15px;
 	} 
 
 	// .featured__slider-item
 
 	&__slider-item{
-		padding-right: 30px;
+		padding: 0px 15px;
 	}
 	// .featured__cart
 
