--- a/app/scss/blocks/news.scss
+++ b/app/scss/blocks/news.scss
@@ -16,21 +16,11 @@
 	@media (max-width: 550px) {
 		padding: 30px 0px;
 	}
-	// .news__main-title
-
-	&__main-title {
-	}
 
 	// .news__slider
 
 	&__slider {
 		margin: 0px -15px;
-	}
-
-	// .news__slider-item
-
-	&__slider-item {
-		
 	}
 
 	// .news__item
@@ -63,8 +53,8 @@
 		position: absolute;
 		left: 10px;
 		bottom: 10px;
-		width: 70px;
-		height: 70px;
+		width: 12.3%;
+		height: 18.5%;
 		border-radius: 5px;
 		background-color: #e12020;
 		color: #ffffff;
@@ -75,6 +65,22 @@
 		justify-content: center;
 		align-items: center;
 
+		@media (max-width: 1400px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 700px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 600px) {
+			font-size: 25px;
+		}
+
+		@media (max-width: 400px) {
+			font-size: 18px;
+		}
+
 		span {
 			display: block;
 			font-weight: 400;
@@ -82,19 +88,19 @@
 		}
 	}
 
-	// .news__item-body
-
-	&__item-body {
-	}
-
 	// .news__item-title
 
 	&__item-title {
 		display: inline-block;
-		color: #e12121;
+		color: #333333;
 		font-size: 16px;
 		font-weight: 600;
 		margin: 0px 0px 20px 0px;
+		transition: color .3s;
+
+		&:hover {
+			color: #e12121;
+		}
 
 		span {
 			color: #888888;
@@ -111,6 +117,13 @@
 		font-weight: 400;
 		line-height: 22px;
 		margin: 0px 0px 30px 0px;
+
+		width: 100%;
+		height: calc(22px * 2);
+		overflow: hidden;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 	}
 
 	// .news__item-btn
@@ -124,5 +137,11 @@
 		font-size: 13px;
 		font-weight: 600;
 		text-transform: uppercase;
+		transition: color .3s, background-color .3s;
+
+		&:hover {
+			background-color: #e12121;
+			color: #fff;
+		}
 	}
 }
