--- a/app/scss/blocks/footer.scss
+++ b/app/scss/blocks/footer.scss
@@ -33,7 +33,7 @@
 			margin: 0px -30px;
 		}
 
-		@media (max-width: 1000px) {
+		@media (max-width: 700px) {
 			margin: -15px -15px;
 		}
 	}
@@ -54,7 +54,6 @@
 
 		@media (max-width: 1000px) {
 			flex: 0 1 50%;
-			padding: 15px 15px;
 
 			&:nth-child(n+3){
 				display: none;
@@ -65,6 +64,10 @@
 		}
 
 		@media (max-width: 700px) {
+			padding: 15px 15px;
+		}
+
+		@media (max-width: 550px) {
 			flex: 0 1 100%;
 		}
 
@@ -112,18 +115,21 @@
 			font-weight: 400;
 			line-height: 23px;
 
-			&:not(:last-child) {
-				margin: 0px 19px 0px 0px;
-
-				@media (max-width: 768px) {
-					margin: 0px 10px 0px 0px;
+			@media (max-width: 730px) {
+				&:first-child {
+					display: none;
 				}
 			}
 		}
 
 		i {
+			padding: 10px;
 			font-size: 19px;
 			color: #888888;
+
+			@media (max-width: 830px) {
+				padding: 7px;
+			}
 
 			&:hover {
 				color: #fff;
