--- a/app/scss/blocks/information.scss
+++ b/app/scss/blocks/information.scss
@@ -7,6 +7,10 @@
 		display: flex;
 		flex-flow: row wrap;
 		margin: -15px;
+
+		@media (max-width: 768px) {
+			margin: -10px;
+		}
 	}
 
 	// .information__column
@@ -18,6 +22,7 @@
 		@media (max-width: 768px) {
 			order: 2;
 			flex: 0 1 50%;
+			padding: 10px;
 		}
 
 		@media (max-width: 500px) {
@@ -51,6 +56,10 @@
 
 			@media (max-width: 1400px) {
 				padding: 0px 0px 38.2% 0px;
+			}
+
+			@media (max-width: 480px) {
+				padding: 0 0 61.2% 0;
 			}
 		}
 	}
