--- a/app/scss/blocks/information_01.scss
+++ b/app/scss/blocks/information_01.scss
@@ -1,15 +1,19 @@
-.banner {
+.information_01 {
 	position: relative;
 	height: 600px;
 	background-color: rgba(0, 0, 0, 0.2);
 	// .banner__bg
 
 	@media (max-width: 1400px) {
-		height: 400px;
+		height: 300px;
 	}
 
 	@media (max-width: 768px) {
 		height: 300px;
+	}
+
+	@media (max-width: 550px) {
+		height: 400px;
 	}
 
 	&__bg {
@@ -25,6 +29,11 @@
 		z-index: 1;
 		left: 6%;
 		top: 30%;
+
+		@media (max-width: 550px) {
+			top: 15%;
+			max-width: 270px;
+		}
 	}
 
 	// .banner__text
@@ -42,10 +51,18 @@
 			margin: 0 0 40px 0;
 		}
 
+		@media (max-width: 900px) {
+			font-size: 20px;
+		}
+
 		@media (max-width: 768px) {
 			font-size: 20px;
 			line-height: 35px;
 			margin: 0 0 30px 0;
+		}
+
+		@media (max-width: 650px) {
+			font-size: 18px;
 		}
 
 		span {
@@ -57,8 +74,12 @@
 				font-size: 40px;
 			}
 
-			@media (max-width: 768px) {
+			@media (max-width: 900px) {
 				font-size: 35px;
+			}
+
+			@media (max-width: 650px) {
+				font-size: 30px;
 			}
 		}
 	}
@@ -67,6 +88,11 @@
 
 	&__box {
 		display: flex;
+
+		@media (max-width: 550px) {
+			flex-direction: column;
+			align-items: flex-start;
+		}
 	}
 
 	// .banner__box-btn
@@ -79,6 +105,11 @@
 		font-size: 13px;
 		font-weight: 600;
 		text-transform: uppercase;	
+
+		@media (max-width: 550px) {
+			margin: 0px 0px 10px 0px;
+			width: 65%;
+		}
 
 		&--first {
 			background-color: #ffffff;
