--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -32,6 +32,10 @@
 		@media (max-width: 1366px) {
 			margin: -10px;
 		}
+
+		@media (max-width: 550px) {
+			margin: -5px;
+		}
 	}
 
 	// .policy__column
@@ -51,25 +55,8 @@
 		}
 
 		@media (max-width: 550px) {
-			flex: 0 1 90%;
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			right: 0;
-			width: 1px;
-			height: 100%;
-			background-color: #ffffff;
-			opacity: 0.1;
-			margin: 0px 10px 0px 0px;
-
-			@media (max-width: 550px) {
-				width: 100%;
-				height: 1px;
-				bottom: 0;
-				margin: 0px 0px 10px 0px;
-			}
+			flex: 0 1 95%;
+			padding: 5px;
 		}
 
 	}
@@ -86,9 +73,45 @@
 		}
 
 		@media (max-width: 550px) {
-			padding: 0px 0px 20px 0px;
+			padding: 0px 0px 10px 0px;
 		}
 
+		&::after {
+			content: "";
+			position: absolute;
+			right: 0;
+			width: 1px;
+			height: 100%;
+			background-color: #ffffff;
+			opacity: 0.1;
+
+			@media (max-width: 550px) {
+				width: 100%;
+				height: 1px;
+				bottom: 0;
+			}
+		}
+
+	}
+
+	&__column:last-child {
+		.policy__item {
+			&::after {
+				content: none;
+			}
+		}
+	}
+
+	&__column:nth-child(2) {
+		.policy__item {
+			&::after {
+				display: none;
+
+				@media (max-width: 550px) {
+					display: block;
+				}
+			}
+		}
 	}
 
 	// .policy__item-image
