--- a/app/scss/blocks/special-product.scss
+++ b/app/scss/blocks/special-product.scss
@@ -79,8 +79,13 @@
 
 		@media (max-width: 1400px) {
 			font-size: 40px;
-			line-height: 40px;
 			margin: 0 0 25px 0;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 35px;
+			 margin: 0 0 15px 0;
+			 line-height: 45px;
 		}
 	}
 
@@ -142,6 +147,10 @@
 			margin: 0 0 20px 0;
 		}
 
+		@media (max-width: 400px) {
+			font-size: 30px;
+		}
+
 		span {
 			color: #ad0300;
 			font-weight: 600;
@@ -170,8 +179,9 @@
 		background-repeat: no-repeat;
 		object-position: center;
 		object-fit: contain;
+		min-height: 300px;
+		min-width: 300px;
 		height: 100%;
-		width: 100%;
 		transition: .5s linear;
 	}
 
