--- a/app/scss/blocks/testimonials.scss
+++ b/app/scss/blocks/testimonials.scss
@@ -2,23 +2,33 @@
 	position: relative;
 	padding: 80px 0px;
 	background: url(../../img/testimonial/bg01.webp);
-	background-position: top;
+	background-position: 50% -25%;
 	background-repeat: no-repeat;
 
 	@media (max-width: 1366px) {
 		padding: 60px 0px;
+		background-position: 50% -5%;
+	}
+
+	@media (max-width: 1200px) {
+		background-position: 50% -23%;
 	}
 
 	@media (max-width: 1000px) {
 		padding: 50px 0px;
+		background-position: 50% -4%;
 	}
 
 	@media (max-width: 768px) {
-		padding: 40px 0px;
+		padding: 40px 0px 50px;
 	}
 
 	@media (max-width: 550px) {
-		padding: 30px 0px 40px;
+		padding: 30px 0px 50px;
+	}
+
+	@media (max-width: 350px) {
+		background-position: 50% -23%;
 	}
 	// .testimonials__main-title
 
@@ -28,23 +38,22 @@
 	// .testimonials__slider
 
 	&__slider {
+		margin: 0px -15px;
 
+		@media (max-width: 768px) {
+			margin: 0px -10px;
+		}
 	}
 
 	// .testimonials__slider-item
 
 	&__slider-item {
 		border-radius: 5px;
-		padding: 15px;
-
-		@media (max-width: 1400px) {
-			padding: 20px;
-		}
+		padding: 0px 15px;
 
 		@media (max-width: 768px) {
-			padding: 15px;
+			padding: 10px 0px;
 		}
-
 
 	}
 
@@ -52,6 +61,14 @@
 		display: flex;
 		background-color: #ffffff;
 		padding: 30px;
+
+		@media (max-width: 1366px) {
+			padding: 20px;
+		}
+
+		@media (max-width: 768px) {
+			padding: 10px;
+		}
 
 		&:hover {
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
