--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,7 +18,7 @@
 @import "blocks/policy";
 @import "blocks/special-product";
 @import "blocks/testimonials";
-@import "blocks/banner";
+@import "blocks/information_01";
 @import "blocks/news";
 @import "blocks/newsletter";
 @import "blocks/footer";
