--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,6 +30,7 @@
 @import "components/slider";
 @import "components/main-title";
 @import "components/accordion";
+@import "components/search";
 
 /* ==========================================================================
   General Styles
