--- a/app/scss/partials/_fonts.scss
+++ b/app/scss/partials/_fonts.scss
@@ -17,23 +17,23 @@
 }
 
 @font-face {
-  font-family: 'fontello';
-  src: url('../fonts/fontello.eot?43398500');
-  src: url('../fonts/fontello.eot?43398500#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?43398500') format('woff2'),
-       url('../fonts/fontello.woff?43398500') format('woff'),
-       url('../fonts/fontello.ttf?43398500') format('truetype'),
-       url('../fonts/fontello.svg?43398500#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+	font-family: 'fontello';
+	src: url('../fonts/fontello.eot?67560477');
+	src: url('../fonts/fontello.eot?67560477#iefix') format('embedded-opentype'),
+		  url('../fonts/fontello.woff2?67560477') format('woff2'),
+		  url('../fonts/fontello.woff?67560477') format('woff'),
+		  url('../fonts/fontello.ttf?67560477') format('truetype'),
+		  url('../fonts/fontello.svg?67560477#fontello') format('svg');
+	font-weight: normal;
+	font-style: normal;
+ }
  /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
  /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
  /*
  @media screen and (-webkit-min-device-pixel-ratio:0) {
 	@font-face {
 	  font-family: 'fontello';
-	  src: url('../font/fontello.svg?32029953#fontello') format('svg');
+	  src: url('../font/fontello.svg?67560477#fontello') format('svg');
 	}
  }
  */
@@ -52,7 +52,7 @@
 	/* For safety - reset parent styles, that can break glyph codes*/
 	font-variant: normal;
 	text-transform: none;
-
+  
   
 	/* you can be more comfortable with increased icons size */
 	/* font-size: 120%; */
@@ -67,7 +67,7 @@
   
  .icon-search:before { content: '\e800'; } /* '' */
  .icon-star:before { content: '\e801'; } /* '' */
- .icon-heart-empty:before { content: '\e802'; } /* '' */
+ .icon-user:before { content: '\e802'; } /* '' */
  .icon-heart:before { content: '\e803'; } /* '' */
  .icon-shuffle:before { content: '\e804'; } /* '' */
  .icon-right-open:before { content: '\e805'; } /* '' */
@@ -77,6 +77,7 @@
  .icon-cog:before { content: '\e809'; } /* '' */
  .icon-basket:before { content: '\e80a'; } /* '' */
  .icon-play:before { content: '\e80b'; } /* '' */
+ .icon-arrows-cw:before { content: '\e80c'; } /* '' */
  .icon-twitter:before { content: '\f099'; } /* '' */
  .icon-facebook:before { content: '\f09a'; } /* '' */
  .icon-gplus:before { content: '\f0d5'; } /* '' */
@@ -84,6 +85,10 @@
  .icon-angle-right:before { content: '\f105'; } /* '' */
  .icon-angle-up:before { content: '\f106'; } /* '' */
  .icon-angle-down:before { content: '\f107'; } /* '' */
+ .icon-ok-squared:before { content: '\f14a'; } /* '' */
+ .icon-euro:before { content: '\f153'; } /* '' */
+ .icon-pound:before { content: '\f154'; } /* '' */
+ .icon-dollar:before { content: '\f155'; } /* '' */
  .icon-youtube-play:before { content: '\f16a'; } /* '' */
  .icon-instagram:before { content: '\f16d'; } /* '' */
  .icon-tumblr:before { content: '\f173'; } /* '' */
