--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,6 +31,7 @@
 @import "components/main-title";
 @import "components/accordion";
 @import "components/search";
+@import "components/setting";
 
 /* ==========================================================================
   General Styles
@@ -49,7 +50,6 @@ button::-moz-focus-inner {padding:0;border:0;}
 a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
-img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
 .container {
