--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -162,7 +162,7 @@
 		transition: color .3s ease, transform .3s ease;
 
 		&:hover {
-			color: $white;
+			color: #e12121;
 			transform: translateX(10px);
 		}
 	}
