--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,6 +32,7 @@
 @import "components/accordion";
 @import "components/search";
 @import "components/setting";
+@import "components/wallet";
 
 /* ==========================================================================
   General Styles
