--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/information_01";
 @import "blocks/news";
 @import "blocks/newsletter";
+@import "blocks/page-policy";
 @import "blocks/footer";
 
 // Components
@@ -85,6 +86,7 @@ body.lock {
 .page {
 	background-color: #f5f5f5;
 	flex: 1 1 auto;
+	padding-top: 60px;
 }
 
 .btn {
