Add page contact-us with adaptive

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/news";
 @import "blocks/newsletter";
 @import "blocks/page-policy";
+@import "blocks/contact-us";
 @import "blocks/footer";
 
 // Components
@@ -34,6 +35,7 @@
 @import "components/search";
 @import "components/setting";
 @import "components/wallet";
+@import "components/breadcrumbs";
 
 /* ==========================================================================
   General Styles
