Add page all-categories with adaptive

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/newsletter";
 @import "blocks/page-policy";
 @import "blocks/contact-us";
+@import "blocks/all-categories";
 @import "blocks/footer";
 
 // Components
