--- a/app/scss/blocks/contact-us.scss
+++ b/app/scss/blocks/contact-us.scss
@@ -249,6 +249,12 @@
 			border: 1px solid #dddddd;
 			padding: 10px;
 			margin: 0px 0px 10px 0px;
+			transition: border .3s;
+		}
+
+		input:focus,
+		textarea:focus {
+			border: 1px solid #e12121;
 		}
 	}
 
