--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -31,6 +31,20 @@
 		position: relative;
 		z-index: 5;
 		margin: 0px 120px 0px 0px;
+
+		@media (max-width: 1366px) {
+			margin: 0px 20px 0px 0px;
+		}
+	}
+
+	&__basket {
+		position: relative;
+
+		@media (max-width: 1260px) {
+			position: absolute;
+			right: 50px;
+		}
+
 	}
 
 }
