--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -1,7 +1,7 @@
 .menu {
 	flex: 1 1 auto;
 	
-	@media (max-width: 1000px) {
+	@media (max-width: 1260px) {
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -27,7 +27,7 @@
 		position: relative;
 		z-index: 3;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 1260px) {
 			display: block;
 		}
 	}
@@ -47,6 +47,10 @@
 			height: 100%;
 			width: 1px;
 			left: 0;
+
+			@media (max-width: 1260px) {
+				display: none;
+			}
 		}
 
 		&:last-child::after{
@@ -58,6 +62,10 @@
 			height: 100%;
 			width: 1px;
 			right: 0;
+
+			@media (max-width: 1260px) {
+				display: none;
+			}
 		}
 	}
 
@@ -71,6 +79,10 @@
 		font-weight: 400;
 		padding: 20px;
 		text-transform: uppercase;
+
+		@media (max-width: 1260px) {
+			color: #fff;
+		}
 
 		&:hover {
 			color: #e12121;
@@ -92,7 +104,7 @@
 	&__submenu {
 		position: absolute;
 		left: 0;
-		top: 61px;
+		top: 59px;
 		width: 1000px;
 		padding: 25px;
 		z-index: 100;
@@ -184,7 +196,7 @@
 	&__burger {
 		display: none;
 
-		@media (max-width: 1000px) {
+		@media (max-width: 1260px) {
 			display: block;
 			position: absolute;
 			width: 30px;
