--- a/app/scss/components/search.scss
+++ b/app/scss/components/search.scss
@@ -1,7 +1,7 @@
 .search {
 	position: absolute;
-	top: 61px;
-	left: 40%;
+	top: 59px;
+	left: -325px;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity .3s;
