Add page blog-default

--- a/app/scss/blocks/blog-list.scss
+++ b/app/scss/blocks/blog-list.scss
@@ -98,7 +98,36 @@
 /* ==========================================================================
   for blog-col end
 ========================================================================== */
-	
+/* ==========================================================================
+  for blog-default
+========================================================================== */
+.blog-list__row-default {
+
+	.blog-list__column {
+		flex: 0 1 100%;
+	}
+
+	.blog-list__item-img {
+		padding: 0 0 50% 0px;
+
+		@media (max-width: 1366px) {
+			padding: 0 0 40% 0px;
+		}
+
+		@media (max-width: 768px) {
+			padding: 0 0 50% 0px;
+		}
+
+		@media (max-width: 500px) {
+			padding: 0 0 60% 0px;
+		}
+	}
+
+}
+
+/* ==========================================================================
+  for blog-default end
+========================================================================== */
 	// .blog-list__item
 
 	&__item {
