Add page shop-col with block sidebar-nav

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/contact-us";
 @import "blocks/all-categories";
 @import "blocks/blog-list";
+@import "blocks/shop-col";
 @import "blocks/footer";
 
 // Components
@@ -43,6 +44,7 @@
 @import "components/sidebar-post";
 @import "components/sidebar-tags";
 @import "components/sidebar-block";
+@import "components/sidebar-nav";
 @import "components/pagination";
 
 /* ==========================================================================
