--- a/app/scss/blocks/policy.scss
+++ b/app/scss/blocks/policy.scss
@@ -1,26 +1,57 @@
 .policy {
-	padding: 80px 0px;
-	background-color: rgba(0, 0, 0, 1);
-	background-image: url(../img/policy/overlay.png);
-	background-position: center;
-	background-size: cover;
-	background-repeat: no-repeat;
 
-	@media (max-width: 1366px) {
-		padding: 60px 0px;
+	
+	&--black {
+		padding: 80px 0px;
+		background-color: rgba(0, 0, 0, 1);
+		background-image: url(../img/policy/overlay.png);
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+
+		@media (max-width: 1366px) {
+			padding: 60px 0px;
+		}
+	
+		@media (max-width: 1000px) {
+			padding: 50px 0px;
+		}
+	
+		@media (max-width: 768px) {
+			padding: 40px 0px
+		}
+	
+		@media (max-width: 550px) {
+			padding: 30px 0px;
+		}
 	}
 
-	@media (max-width: 1000px) {
-		padding: 50px 0px;
+	&--white {
+		background-color: #fff;
+		padding: 0;
+
+		.policy__item {
+			padding: 50px 30px 50px 30px;
+
+			&::after {
+				content: "";
+				position: absolute;
+				right: 0;
+				top: 0;
+				width: 1px;
+				height: 100%;
+				background-color: #000000;
+			}
+		}
+		.policy__row {
+			margin: 0;
+		}
+		.policy__column {
+			padding: 0;
+		}
 	}
 
-	@media (max-width: 768px) {
-		padding: 40px 0px
-	}
 
-	@media (max-width: 550px) {
-		padding: 30px 0px;
-	}
 	// .policy__row
 
 	&__row {
@@ -91,7 +122,6 @@
 				bottom: 0;
 			}
 		}
-
 	}
 
 	&__column:last-child {
@@ -104,12 +134,15 @@
 
 	&__column:nth-child(2) {
 		.policy__item {
-			&::after {
-				display: none;
-
-				@media (max-width: 550px) {
-					display: block;
+			@media (max-width: 1000px) {
+				&::after {
+					display: none;
+	
+					@media (max-width: 550px) {
+						display: block;
+					}
 				}
+				
 			}
 		}
 	}
@@ -165,6 +198,10 @@
 		line-height: 20px;
 		text-transform: uppercase;
 		margin: 0px 0px 30px 0px;
+
+		&--white{
+			color: #333333;
+		}
 
 		@media (max-width: 1366px) {
 			margin: 0px 0px 20px 0px;
