--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -45,6 +45,8 @@
 @import "components/sidebar-tags";
 @import "components/sidebar-block";
 @import "components/sidebar-nav";
+@import "components/sidebar-new";
+@import "components/sidebar-news";
 @import "components/pagination";
 
 /* ==========================================================================
