--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -47,6 +47,10 @@
 @import "components/sidebar-nav";
 @import "components/sidebar-new";
 @import "components/sidebar-news";
+@import "components/perfect-product";
+@import "components/featured-product";
+@import "components/information-product";
+@import "components/popular-product";
 @import "components/pagination";
 
 /* ==========================================================================
