--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -89,12 +89,20 @@
 /* ==========================================================================
   featured__slider
 ========================================================================== */
-.featured__slider .slick-prev{
+.featured__slider .slick-prev {
 	left: 10px;
 }
 
-.featured__slider .slick-next{
+.featured-product__slider .slick-prev {
+	left: 25px;
+}
+
+.featured__slider .slick-next {
 	right: 10px;
+}
+
+.featured-product__slider .slick-next{
+	right: 25px;
 }
 /* ==========================================================================
   testimonials__slider
@@ -125,7 +133,9 @@
 	font-size: 0;
 	padding: 0;
 }
-
+/* ==========================================================================
+  news__slider
+========================================================================== */
 .news__slider .slick-arrow {
 	top: 33%;
 }
@@ -136,4 +146,36 @@
 
 .news__slider .slick-next{
 	right: 25px;
+}
+/* ==========================================================================
+  popular-product__slider
+========================================================================== */
+.popular-product__slider .slick-prev {
+	left: 10px;
+}
+
+.popular-product__slider .slick-next {
+	right: 10px;
+}
+
+.popular-product__slider .slick-slide.slick-current{
+	.popular-product__slider-item {
+		border-color: #e12121;
+
+
+	}
+	.popular-product__categories {
+		overflow: visible;
+		&::after {
+			content: "";
+			position: absolute;
+			z-index: 6;
+			left: 50%;
+			bottom: -5px;
+			border-top: 5px solid #e12121;
+			border-left: 5px solid transparent;
+			border-right: 5px solid transparent;
+		}
+	}
+
 }
