--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -39,7 +39,11 @@
 		position: relative;
 
 		@media (max-width: 1366px) {
-			padding: 0px 0px 90% 0px;
+			padding: 0px 0px 70% 0px;
+		}
+
+		@media (max-width: 600px) {
+			padding: 0px 0px 60% 0px;
 		}
 
 		img {
