--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -52,6 +52,7 @@
 @import "components/information-product";
 @import "components/popular-product";
 @import "components/pagination";
+@import "components/countdown";
 
 /* ==========================================================================
   General Styles
