--- a/app/scss/components/featured-product.scss
+++ b/app/scss/components/featured-product.scss
@@ -3,9 +3,17 @@
 	&__slider {
 		max-width: 1500px;
 		margin: 0px -15px;
+
+		@media (max-width: 768px) {
+			margin: 0px -10px;
+		}
 	}
 
 	&__slider-item {
 		padding: 0px 15px;
+
+		@media (max-width: 768px) {
+			padding: 0px 10px;
+		}
 	}
 }
