--- a/app/scss/components/perfect-product.scss
+++ b/app/scss/components/perfect-product.scss
@@ -2,10 +2,18 @@
 	background: #fff;
 	border-radius: 5px;
 	padding: 30px;
+
+	@media (max-width: 1100px) {
+		padding: 15px;
+	}
 	// .perfect-product__title
 
 	&__title {
 		margin: 0px 0px 50px 0px;
+
+		@media (max-width: 1100px) {
+			margin: 0px 0px 30px 0px;
+		}
 	}
 
 	// .perfect-product__row
@@ -13,6 +21,15 @@
 	&__row {
 		display: flex;
 		margin: 0 20px;
+
+		@media (max-width: 1100px) {
+			margin: 0 10px;
+		}
+
+		@media (max-width: 930px) {
+			flex-flow: row wrap;
+			margin: -15px 0;
+		}
 	}
 
 	// .perfect-product__column
@@ -20,6 +37,15 @@
 	&__column {
 		flex: 0 1 50%;
 		padding: 0px 20px;
+
+		@media (max-width: 1100px) {
+			padding: 0px 10px;
+		}
+
+		@media (max-width: 930px) {
+			flex: 0 1 100%;
+			padding: 15px 0px;
+		}
 	}
 
 	// .perfect-product__item
@@ -31,13 +57,30 @@
 	// .perfect-product__item-img
 
 	&__item-img {
-		margin: 0px 30px 0px 0px;
+		flex: 0 0 40%;
+		position: relative;
+		min-height: 250px;
 
+		@media (max-width: 930px) {
+			flex: 0 0 30%;
+			min-height: 200px;
+		}
 
 		img {
-			width: 370px;
-			height: 370px;
+			width: 100%;
+			height: 100%;
 			object-fit: contain;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+	}
+
+	&__item-body {
+		padding: 0px 0px 0px 30px;
+
+		@media (max-width: 930px) {
+			padding: 0 0 0 15px;
 		}
 	}
 
@@ -49,6 +92,20 @@
 		font-weight: 600;
 		line-height: 30px;
 		margin: 0px 0px 20px 0px;
+
+		@media (max-width: 1366px) {
+			font-size: 18px;
+			line-height: 28px;
+		}
+
+		@media (max-width: 1100px) {
+			font-size: 16px;
+    		line-height: 26px;
+		}
+
+		&:hover {
+			color: #e12121;
+		}
 	}
 
 	// .perfect-product__item-descr
@@ -59,12 +116,21 @@
 		line-height: 22px;
 		margin: 0px 0px 30px 0px;
 
+		@media (max-width: 1100px) {
+			line-height: 16px;
+    		margin: 0 0 20px 0;
+		}
+
 		span {
 			display: block;
 			color: #e12121;
 			font-weight: 600;
 			margin: 0px 0px 10px 0px;
 		}
+	}
+
+	&__countdown {
+		margin: 0px 0px 30px 0px;
 	}
 
 	// .perfect-product__item-btn
@@ -75,5 +141,9 @@
 		font-weight: 600;
 		text-decoration: underline;
 		text-transform: uppercase;
+
+		&:hover {
+			color: #e12121;
+		}
 	}
 }
