--- a/app/scss/components/popular-product.scss
+++ b/app/scss/components/popular-product.scss
@@ -14,7 +14,6 @@
 
 	&__slider {
 		max-width: 1500px;
-		overflow: visible;
 	}
 
 	// .popular-product__slider-item
@@ -25,11 +24,27 @@
 		border: 1px solid #dddddd;
 		background-color: #ffffff;
 		transition: border .3s;
+
+		&:hover {
+			border-color: #e12121;
+		}
 	}
 
+	&__row {
+		display: flex;
+		margin: 0 -15px;
+	}
+
+	&__column {
+		flex: 0 1 20%;
+		padding: 0px 15px;
+
+	}
 	// .popular-product__categories
 
 	&__categories {
+
+
 	}
 
 	// .popular-product__categories-img
