--- a/app/scss/components/sidebar-categories.scss
+++ b/app/scss/components/sidebar-categories.scss
@@ -47,6 +47,11 @@
 		padding: 0px 0px 15px 0px;
 		border-bottom: 1px solid #888;
 
+		@media (max-width: 1100px) {
+			font-size: 18px;
+			line-height: 20px;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
