--- a/app/scss/components/setting.scss
+++ b/app/scss/components/setting.scss
@@ -29,7 +29,10 @@
 		padding: 30px;
 
 		&--black {
-			background: #000;
+			background: url(../../img/basket__setting/bg_setting.webp), #000;
+			background-position: bottom;
+			background-size: contain;
+			background-repeat: no-repeat;
 		}
 		&--white {
 			background: #fff;
