--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -58,6 +58,7 @@
 @import "components/sidebar-brands";
 @import "components/slider-grid";
 @import "components/carts-grid";
+@import "components/toolbar";
 
 /* ==========================================================================
   General Styles
