--- a/app/scss/components/cart.scss
+++ b/app/scss/components/cart.scss
@@ -4,7 +4,6 @@
 	border-radius: 5px;
 	padding: 20px;
 	overflow: hidden;
-	margin: 10px 0px 0px 0px;
 
 	@media (max-width: 1366px) {
 		padding: 10px;
@@ -19,11 +18,6 @@
 		}
 		.cart__body-color {
 			opacity: 1;
-		}
-
-		.cart__body-btn {
-			background-color: #e12121;
-			color: #ffffff;
 		}
 
 		.cart__body-actions {
@@ -200,6 +194,11 @@
 	
 		@media (max-width: 1366px) {
 			padding: 8px 15px;
+		}
+
+		&:hover {
+			background-color: #e12121;
+			color: #ffffff;
 		}
 	}
 
