--- a/app/scss/components/carts-grid.scss
+++ b/app/scss/components/carts-grid.scss
@@ -6,6 +6,10 @@
 		display: flex;
 		flex-flow: row wrap;
 		margin: -15px -15px;
+
+		@media (max-width: 1300px) {
+			margin: -10px -10px;
+		}
 	}
 
 	// .carts-grid__column
@@ -13,5 +17,30 @@
 	&__column {
 		flex: 0 1 20%;
 		padding: 15px 15px;
+
+		@media (max-width: 1300px) {
+			flex: 0 1 25%;
+			padding: 10px 10px;
+		}
+
+		@media (max-width: 1100px) {
+			flex: 0 1 33.333%;
+		}
+
+		@media (max-width: 850px) {
+			flex: 0 1 50%;
+		}
+
+		@media (max-width: 768px) {
+			flex: 0 1 33.333%;
+		}
+
+		@media (max-width: 650px) {
+			flex: 0 1 50%;
+		}
+
+		@media (max-width: 450px) {
+			flex: 0 1 100%;
+		}
 	}
 }
