--- a/app/scss/components/sidebar-nav.scss
+++ b/app/scss/components/sidebar-nav.scss
@@ -8,8 +8,8 @@
 		font-size: 20px;
 		font-weight: 600;
 		text-transform: uppercase;
-		margin: 0px 0px 20px 0px;
-		padding: 20px;
+		margin: 0 20px 20px 20px;
+		padding: 20px 0px;
 		border-bottom: 1px solid rgba(#000000, .2);
 
 		&--light {
@@ -20,16 +20,6 @@
 			color: #333333;
 		}
 
-		&::after {
-			content: "";
-			position: absolute;
-			height: 1px;
-			opacity: 0.2;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-			background: #000000;
-		}
 	}
 
 	// .sidebar-nav__list
@@ -37,6 +27,7 @@
 	&__list {
 		display: flex;
 		flex-direction: column;
+		margin: 0px 0px 10px 0px;
 	}
 
 	// .sidebar-nav__item
@@ -49,13 +40,29 @@
 	  	transition: background 500ms ease;
 		
 	  &:hover {
-		  background: #fff;
-
-		  .sidebar-nav__link {
-				color: #333333;
+		  .sidebar-nav__link--light {
+				color: #e12121;
 				transform: translateX(10px);
 		  }
+
+		  .sidebar-nav__link--dark {
+				color: #fff;
+				transform: translateX(10px);
+		  }
+
 	  }
+
+	  	&--dark {
+			&:hover {
+			background: #e12121;
+			}
+		}
+		  
+	  	&--light {
+			&:hover {
+			background: #fff;
+			}
+  		}
 	}
 
 	// .sidebar-nav__link
