--- a/app/scss/partials/_fonts.scss
+++ b/app/scss/partials/_fonts.scss
@@ -18,12 +18,12 @@
 
 @font-face {
 	font-family: 'fontello';
-	src: url('../fonts/fontello.eot?67560477');
-	src: url('../fonts/fontello.eot?67560477#iefix') format('embedded-opentype'),
-		  url('../fonts/fontello.woff2?67560477') format('woff2'),
-		  url('../fonts/fontello.woff?67560477') format('woff'),
-		  url('../fonts/fontello.ttf?67560477') format('truetype'),
-		  url('../fonts/fontello.svg?67560477#fontello') format('svg');
+	src: url('../fonts/fontello.eot?75512282');
+	src: url('../fonts/fontello.eot?75512282#iefix') format('embedded-opentype'),
+		  url('../fonts/fontello.woff2?75512282') format('woff2'),
+		  url('../fonts/fontello.woff?75512282') format('woff'),
+		  url('../fonts/fontello.ttf?75512282') format('truetype'),
+		  url('../fonts/fontello.svg?75512282#fontello') format('svg');
 	font-weight: normal;
 	font-style: normal;
  }
@@ -33,7 +33,7 @@
  @media screen and (-webkit-min-device-pixel-ratio:0) {
 	@font-face {
 	  font-family: 'fontello';
-	  src: url('../font/fontello.svg?67560477#fontello') format('svg');
+	  src: url('../font/fontello.svg?75512282#fontello') format('svg');
 	}
  }
  */
@@ -46,13 +46,13 @@
   
 	display: inline-block;
 	text-decoration: inherit;
+	width: 1em;
 	text-align: center;
 	/* opacity: .8; */
   
 	/* For safety - reset parent styles, that can break glyph codes*/
 	font-variant: normal;
 	text-transform: none;
-  
   
 	/* you can be more comfortable with increased icons size */
 	/* font-size: 120%; */
@@ -78,6 +78,9 @@
  .icon-basket:before { content: '\e80a'; } /* '' */
  .icon-play:before { content: '\e80b'; } /* '' */
  .icon-arrows-cw:before { content: '\e80c'; } /* '' */
+ .icon-th:before { content: '\e80d'; } /* '' */
+ .icon-th-list:before { content: '\e80e'; } /* '' */
+ .icon-th-large:before { content: '\e80f'; } /* '' */
  .icon-twitter:before { content: '\f099'; } /* '' */
  .icon-facebook:before { content: '\f09a'; } /* '' */
  .icon-gplus:before { content: '\f0d5'; } /* '' */
