--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -59,6 +59,8 @@
 @import "components/slider-grid";
 @import "components/carts-grid";
 @import "components/toolbar";
+@import "components/sponsor";
+@import "components/sidebar-price";
 
 /* ==========================================================================
   General Styles
