--- a/app/scss/components/checkbox.scss
+++ b/app/scss/components/checkbox.scss
@@ -1,15 +1,18 @@
 .label {
-	display: inline-block;
+	display: block;
 	position: relative;
 	padding-left: 35px;
-	margin-bottom: 20px;
 	cursor: pointer;
 	color: #888888;
-	font-size: 22px;
+	font-size: 13px;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+
+	&:not(:last-child) {
+		margin: 0px 0px 20px 0px;
+	}
 
 	&:hover {
 		color: #333333;
