--- a/app/scss/components/sidebar-brands.scss
+++ b/app/scss/components/sidebar-brands.scss
@@ -11,5 +11,6 @@
 		text-transform: uppercase;
 		margin: 0px 0px 20px 0px;
 		padding: 0px 0px 20px 0px;	
+		border-bottom: 1px solid #dddddd;
 	}
 }
