Add blocks about-author, blog-single

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -61,6 +61,8 @@
 @import "components/toolbar";
 @import "components/sponsor";
 @import "components/sidebar-price";
+@import "components/blog-single";
+@import "components/about-author";
 
 /* ==========================================================================
   General Styles
