Add block comments and leave-comment for page all-categories-gid

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -63,6 +63,8 @@
 @import "components/sidebar-price";
 @import "components/blog-single";
 @import "components/about-author";
+@import "components/comments";
+@import "components/leave-comment";
 
 /* ==========================================================================
   General Styles
