--- a/app/scss/components/sidebar-price.scss
+++ b/app/scss/components/sidebar-price.scss
@@ -20,74 +20,74 @@
 
 	// .sidebar-price__polzunok-line
 
-	&__polzunok-line {
+	&__polzunok-btn {
+		width: 100%;
+		padding: 9px;
+		border-radius: 20px;
+		border: 1px solid #dddddd;
+		background-color: #ffffff;
+		color: #888888;
+		font-size: 13px;
+		font-weight: 800;
+		text-transform: uppercase;
+		transition: color .3s, background-color .3s;
+
+		&:hover {
+			background-color: #e12121;
+			color: #ffffff;
+		}
 	}
 }
 
-.sidebar-price__polzunok * {
-	box-sizing: border-box;
-	outline: none;
-}
 .sidebar-price__polzunok {
-	padding: 10px 16px;
-	margin: 30px;
 }
-.sidebar-price__polzunok:after {
-	content: "";
-	clear: both;
-	display: table;
-}
+
 .sidebar-price__polzunok .ui-slider {
 	position: relative;
-	background: #BFE2FF;
-	height: 10px;
-	border-radius:10px;
-	box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(255, 255, 255, 1);
+	background-color: #dddddd;
+	height: 5px;
 }
 .sidebar-price__polzunok .ui-slider .ui-slider-handle {
 	position: absolute;
-	margin-left: -16px;
-	width: 32px;
-	height: 32px;
+	margin-left: 0;
+	margin-right: -16px;
+	width: 20px;
+	height: 20px;
 	cursor: pointer;
 	border-radius: 50%;
-	border: 4px solid #BFE2FF;
-	top: -11px;
+	border: 1px solid #dddddd;
+	top: -8px;
 	background: #FFF;
 	z-index: 2;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.2), 0 4px 6px rgba(0,0,0,0.2);
 	transition: transform 0.2s, border 0.4s;
 }
 .sidebar-price__polzunok .ui-slider .ui-slider-handle:hover,
 .sidebar-price__polzunok .ui-slider .ui-slider-handle:focus {
 	transform: scale(1.2);
-	border: 4px solid #337AB7;
+	border: 1px solid #888888;
 }
 .sidebar-price__polzunok-input-l,
 .sidebar-price__polzunok-input-r {
-	height: 32px;
-	background: #FFF;
-	border-radius: 28px;
-	border: 4px solid #BFE2FF;
-	text-align:center;
-	font-size: 18px;
-	padding: 16px;
-	width: 140px;
-	margin-top:30px;
-	box-shadow: 0 2px 5px rgba(0,0,0,0.2), 0 4px 6px rgba(0,0,0,0.2);
-}
-.sidebar-price__polzunok-input-l {
-	float: left;
-}
-.sidebar-price__polzunok-input-r {
-	float: right;
+	height: 30px;
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 10px;
+	width: 110px;
+	color: #888888;
+	font-size: 13px;
+	font-weight: 400;
+	margin: 0px 0px 30px 0px;
+	display: inline-block;
+
+	@media (max-width: 1366px) {
+		width: 80px;
+	}
 }
 .sidebar-price__polzunok .ui-slider .ui-slider-range {
 	position: absolute;
 	z-index: 1;
-	height: 10px;
+	height: 5px;
 	border: 0;
-	background: #337AB7;
-	border-radius:10px;
-	box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.3), 1px 1px 5px rgba(255, 255, 255, 1);
+	margin: 0px 0px 35px 0px;
+	background-color: #888888;
 }
