--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/blog-list";
 @import "blocks/shop-col";
 @import "blocks/all-categories-grid";
+@import "blocks/about";
 @import "blocks/footer";
 
 // Components
@@ -65,6 +66,8 @@
 @import "components/about-author";
 @import "components/comments";
 @import "components/leave-comment";
+@import "components/choose-us";
+@import "components/our-team";
 
 /* ==========================================================================
   General Styles
