--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,10 +23,12 @@
 @import "blocks/newsletter";
 @import "blocks/page-policy";
 @import "blocks/contact-us";
+@import "blocks/contact";
 @import "blocks/all-categories";
 @import "blocks/blog-list";
 @import "blocks/shop-col";
 @import "blocks/all-categories-grid";
+@import "blocks/detail";
 @import "blocks/about";
 @import "blocks/footer";
 
