--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -70,6 +70,7 @@
 @import "components/leave-comment";
 @import "components/choose-us";
 @import "components/our-team";
+@import "components/tabs";
 
 /* ==========================================================================
   General Styles
