Add page detail

--- a/app/scss/components/slider.scss
+++ b/app/scss/components/slider.scss
@@ -209,3 +209,19 @@
 /* ==========================================================================
   
 ========================================================================== */
+/* ==========================================================================
+  popular-product__slider
+========================================================================== */
+.cart-detail__slider .slick-prev {
+	left: 20px;
+}
+
+.cart-detail__slider .slick-next {
+	right: 20px;
+}
+
+.cart-detail__box .slick-slide.slick-current{
+	.cart-detail__box-item {
+		border: 2px solid #e12020;
+	}
+}
