--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -71,6 +71,7 @@
 @import "components/choose-us";
 @import "components/our-team";
 @import "components/tabs";
+@import "components/cart-detail";
 
 /* ==========================================================================
   General Styles
